--- a/common.css
+++ b/common.css
@@ -61,7 +61,9 @@ nav ul li {
 	list-style: none;
 	padding-top: 1rem;
 }
-
+nav ul li a {
+	font-size: 0.875rem !important;
+}
 .links {
 	position: fixed;
 	top: 20px;
